# api/src/api/shops/dto/response/response-shop-list.dto.ts
@@ -1,5 +1,7 @@
 import { ShopModel } from '#/src/models/shop.model';
 
+import { ResponsePaginationDto } from '#/src/api/common/dto/response/response-pagination.dto';
+
 import { ApiProperty } from '@nestjs/swagger';
 
 import { Fields } from '#/src/models/types/model.type';
@@ -9,6 +11,9 @@ export class ResponseShopListDto {
     type: [ShopModel],
   })
   shops!: ShopModel[];
+
+  @ApiProperty({ type: ResponsePaginationDto })
+  pagination!: ResponsePaginationDto;
 
   constructor(props: Fields<ResponseShopListDto>) {
     Object.assign(this, props);
